добавил описание правил

--- a/Подсистема расширенных настроек (ess)/Правила получения данных.md
+++ b/Подсистема расширенных настроек (ess)/Правила получения данных.md
@@ -1,8 +1,14 @@
 # Правила получения данных
 
+1. Справочник "ППД"
+2. Справочник "Настроеки ППД"
+3. Регистр сведений "Настройки получения значений"
+
+## Описание Правила
+
 Справочник служит для хранения и редактирования схемы компоновки данных. Вариант выполнения правила служит для определения способа получения данных: 
-1. выполнение схемы (простое выполнение скд с настройкой)
-2. выполнение запроса (выполнение запроса, полученного при сохранении настройки) возможно только при простой схеме(один набор данных, нет расчетных полей в схеме и в настройке). 
+1. *выполнение схемы* (простое выполнение скд с настройкой)
+2. *выполнение запроса* (выполнение запроса, полученного при сохранении настройки) возможно только при простой схеме(один набор данных, нет расчетных полей в схеме и в настройке). 
 
 Режим работы указывает, где находятся настройки и какие данные будут возвращены:
 - *Стандартный вариант*. Настройка указывается при выполнении правила, возвращаются данные, полученные схемой.
@@ -13,23 +19,23 @@ __*Игнорировать структуру*__ служит для очист
 Тип результат определяется реквизитами __*Имя колонки*__, __*Единственное значение*__: 
 
 + __*Имя колонки*__ *не задано*:
-	- __*Флаг Единственное значение установлен*__ – структура из строки таблицы-результата
-	- __*Флаг Единственное значение сброшен*__ – таблица значений
+	- Флаг __*Единственное значение*__ *установлен* – структура из строки таблицы-результата
+	- Флаг __*Единственное значение*__ *сброшен* – таблица значений
 + __*Имя колонки*__ *задано*:
-	- __*Флаг Единственное значение установлен*__ – одно значение
-	- __*Флаг Единственное значение сброшен*__ – массив
+	- Флаг __*Единственное значение*__ *установлен* – одно значение
+	- Флаг __*Единственное значение*__ *сброшен* – массив
   
-![ППД Форма элемента](/images/ППД.png)
+![ППД](/images/ППД.png)
   
-# Настройки правил получения данных
+## Описание Настройки правила
 
 Справочник хранит настройки схемы компоновки данных и, если вариант выполнения запрос, то текст запроса и его параметры.
 
- ![ППД Форма элемента](/images/НастройкаППД.png)
+ ![НАстройка ППД](/images/НастройкаППД.png)
 
-# Тестирование правила получения данных
+## Тестирование правила
 
 Тестирование осуществляется в форме списка правил на вкладке «Диагностика»
 
-![ППД Форма элемента](/images/ДиагностикаППД.png)
+![Диагоностика ППД](/images/ДиагностикаППД.png)
  
