--- a/Подсистема расширенных настроек (ess)/Общие настройки.md
+++ b/Подсистема расширенных настроек (ess)/Общие настройки.md
@@ -10,18 +10,22 @@
 Справочник служит для определения типов необходимых настроек и разрезов из хранения. 
 На форме выбираются типы значений настроек, настраивается использование разрезов:
 - Секция. Добавляются в соответствующие табличной части
-- Ключ. Выбирается тип ключа.
+- Ключ. Настраиваются поля ключа.
 
-При необходимости выбирается форма для заполнения хранилища значений.
+При необходимости можно указать форму для заполнения хранилища записи.
   
-![Раздел](/images/РазделОбщихНастроек.png)
+![Раздел](images/РазделОбщихНастроек.png)
   
 ## Список общих настроек
 
-Хранит значения (пять значений и хранилище.) в разрезе раздела, секции раздела и ключа. 
-Есть возможность отключить настройку.
+Хранит значения (пять значений и хранилище.) в разрезе раздела, секции и ключа. 
+Есть возможность отключить настройку. 
+Модуль менеджера содержит функцию для получения текста запроса данных по разделу "ЗапросОбщиеНастройки".
 
- ![Список настроек](/images/СписокОбщихНастроек.png)
+ ![Список настроек](images/СписокОбщихНастроек.png)
+
+ 
+ ![Форма записи общей настройки](images/СписокОбщихНастроек.png)
 
 ## Типы значений настроек
 
