--- a/Подсистема расширенных настроек (ess)/Общие настройки.md
+++ b/Подсистема расширенных настроек (ess)/Общие настройки.md
@@ -25,7 +25,7 @@
  ![Список настроек](images/СписокОбщихНастроек.png)
 
  
- ![Форма записи общей настройки](images/СписокОбщихНастроек.png)
+ ![Форма записи общей настройки](images/ЗаписьОбщейНастройки.png)
 
 ## Типы значений настроек
 
