--- a/Подсистема расширенных настроек (ess)/Общие настройки.md
+++ b/Подсистема расширенных настроек (ess)/Общие настройки.md
@@ -1,9 +1,11 @@
 # Общие настойки
 
+Представляет собой объекты для хранения произвольных данных, используемых в алгоритмах.
 Общие настроки состоят:
 1. Справочник "Разделы общих настроек"
 2. Регистр сведений "Общие настроек"
-3. ПВХ "Типы значений расширенных настроек"
+3. План видов характеристик "Типы значений расширенных настроек"
+4. Справочник "Ключи раздела"
 
 ## Разделы настроек
 
@@ -15,6 +17,11 @@
 При необходимости можно указать форму для заполнения хранилища записи.
   
 ![Раздел](images/РазделОбщихНастроек.png)
+
+## Ключ общих настроек
+
+Поля ключа настраиваются в Разделе общих настроек. Элементы справончики служат для детализации разреза.
+Содержит табличную часть с выбранными значениями полей.
   
 ## Список общих настроек
 
@@ -22,14 +29,15 @@
 Есть возможность отключить настройку. 
 Модуль менеджера содержит функцию для получения текста запроса данных по разделу "ЗапросОбщиеНастройки".
 
- ![Список настроек](images/СписокОбщихНастроек.png)
+Форма списка настроек:
+![Список настроек](images/СписокОбщихНастроек.png)
 
- 
- ![Форма записи общей настройки](images/ЗаписьОбщейНастройки.png)
+ Форма записи общей настройки с разделом, где указана форма для заполнения хранилища:
+![Форма записи общей настройки](images/ЗаписьОбщейНастройки.png)
 
 ## Типы значений настроек
 
-Кроме типа содержит __*"Заголовок"*__ настройки.
+Содержит __*"Заголовок"*__ настройки и __*"Идентификатор"*__(используется в именовании колонок запроса).
 
 
  
