Update Правила описания встроенных документов.md

--- a/Подсистема расширенных настроек (ess)/Правила описания встроенных документов.md
+++ b/Подсистема расширенных настроек (ess)/Правила описания встроенных документов.md
@@ -3,6 +3,6 @@
 Служат для создания встроенных документов в пользовательском режиме.
 Элемент справочника хранит табличный документ или макет табличного документа.
   
-![Форма элемента](/images/ПравилоОписаниеВстрДокументов.png)
+![Форма элемента](images/ПравилоОписаниеВстрДокументов.png)
   
 
