Update Правила описания встроенных документов.md

--- a/Подсистема расширенных настроек (ess)/Правила описания встроенных документов.md
+++ b/Подсистема расширенных настроек (ess)/Правила описания встроенных документов.md
@@ -1,7 +1,6 @@
 # Правила описание встроенных документов
 
-Служат для создания встроенных документов в пользовательском режиме.
-Элемент справочника хранит табличный документ или макет табличного документа.
+Служат для изменения, хранения встроенных документов: табличного документ, макета табличного документа, текстового документа, форматированного документа.
   
 ![Форма элемента](images/ПравилоОписаниеВстрДокументов.png)
   
