Update Правила получения данных.md

--- a/Подсистема расширенных настроек (ess)/Правила получения данных.md
+++ b/Подсистема расширенных настроек (ess)/Правила получения данных.md
@@ -15,10 +15,11 @@
 - *По списку настроек*. Настройки задаются в регистре «Настройки получения значений», возвращается значение, указанное из колонки «результат», если при выполнении правила с текущей настройкой получена хотя бы одна строка. **При варианте выполнения запросом никакого поштучного выполнения не будет! Будет выполнен один единый запрос, состоящий из запросов действующих настроек**.
 - ~~*Расширенный*. Происходит выполнение указанных правил и агрегация результата.~~
 
-__*Номер фиксированного запроса в пакете*__ указывает индекс крайнего запроса в пакете. До этого этого индекса все запросы считаются независящями от отборов.
-__*Используется список объектов*__ определяет для варианта выполнения *выполнение запроса* использование списка значений.
-__*Тип свойства*__ используется при режиме работы *По списку настроек*. Определяет тип значения в регистре настроек.
-__*Игнорировать структуру*__ служит для очистки структуры схемы при выполнении и добавления «детальных записей». 
+- __*Номер фиксированного запроса в пакете*__ указывает индекс крайнего запроса в пакете. До этого этого индекса все запросы считаются независящями от отборов.
+- __*Используется список объектов*__ определяет для варианта выполнения *выполнение запроса* использование списка значений.
+- __*Тип свойства*__ используется при режиме работы *По списку настроек*. Определяет тип значения в регистре настроек.
+- __*Игнорировать структуру*__ служит для очистки структуры схемы при выполнении и добавления «детальных записей». 
+
 Тип результат определяется реквизитами __*Имя колонки*__, __*Единственное значение*__: 
 
 + __*Имя колонки*__ *не задано*:
