Update Правила получения данных.md

--- a/Подсистема расширенных настроек (ess)/Правила получения данных.md
+++ b/Подсистема расширенных настроек (ess)/Правила получения данных.md
@@ -6,14 +6,15 @@
 
 ## Описание Правила
 
-Справочник служит для хранения и редактирования схемы компоновки данных. Вариант выполнения правила служит для определения способа получения данных: 
-1. *выполнение схемы* (простое выполнение СКД с настройкой)
-2. *выполнение запроса* (выполнение запроса, полученного при сохранении настройки) возможно только при простой схеме(один набор данных, нет расчетных полей в схеме и в настройке). 
+Справочник служит для хранения и редактирования схемы компоновки данных. 
+- __*Вариант выполнения*__  правила служит для определения способа получения данных: 
+	+ *выполнение схемы* (простое выполнение СКД с настройкой)
+	+ *выполнение запроса* (выполнение запроса, полученного при сохранении настройки) возможно только при простой схеме(один набор данных, нет расчетных полей в схеме и в настройке). 
 
-Режим работы указывает, где находятся настройки и какие данные будут возвращены:
-- *Стандартный вариант*. Настройка указывается при выполнении правила, возвращаются данные, полученные схемой.
-- *По списку настроек*. Настройки задаются в регистре «Настройки получения значений», возвращается значение, указанное из колонки «результат», если при выполнении правила с текущей настройкой получена хотя бы одна строка. **При варианте выполнения запросом никакого поштучного выполнения не будет! Будет выполнен один единый запрос, состоящий из запросов действующих настроек**.
-- ~~*Расширенный*. Происходит выполнение указанных правил и агрегация результата.~~
+- __*Режим работы*__ указывает, где находятся настройки и какие данные будут возвращены:
+	+ *Стандартный вариант*. Настройка указывается при выполнении правила, возвращаются данные, полученные схемой.
+	+ *По списку настроек*. Настройки задаются в регистре «Настройки получения значений», возвращается значение, указанное из колонки «результат», если при выполнении правила с 		текущей настройкой получена хотя бы одна строка. **При варианте выполнения запросом никакого поштучного выполнения не будет! Будет выполнен один единый запрос, состоящий из 		запросов действующих настроек**.
+	- ~~*Расширенный*. Происходит выполнение указанных правил и агрегация результата.~~
 
 - __*Номер фиксированного запроса в пакете*__ указывает индекс крайнего запроса в пакете. До этого этого индекса все запросы считаются независящями от отборов.
 - __*Используется список объектов*__ определяет для варианта выполнения *выполнение запроса* использование списка значений.
