Update Правила получения данных.md

--- a/Подсистема расширенных настроек (ess)/Правила получения данных.md
+++ b/Подсистема расширенных настроек (ess)/Правила получения данных.md
@@ -6,7 +6,7 @@
 
 ## Описание Правила
 
-Справочник служит для хранения и редактирования схемы компоновки данных. 
+Справочник служит для хранения и редактирования схемы компоновки данных. Модуль менеджера содержит функцию для получения данных "ВыполнитьПравило".
 - __*Вариант выполнения*__  правила служит для определения способа получения данных: 
 	+ *выполнение схемы* (простое выполнение СКД с настройкой)
 	+ *выполнение запроса* (выполнение запроса, полученного при сохранении настройки) возможно только при простой схеме(один набор данных, нет расчетных полей в схеме и в настройке). 
