Update Правила описания встроенных документов.md

--- a/Подсистема расширенных настроек (ess)/Правила описания встроенных документов.md
+++ b/Подсистема расширенных настроек (ess)/Правила описания встроенных документов.md
@@ -1,6 +1,6 @@
 # Правила описание встроенных документов
 
-Служат для изменения, хранения встроенных документов: табличного документ, макета табличного документа, текстового документа, форматированного документа. Модуль менеджера содержит функцию для получения данных "ВыполнитьПравило"
+Служит для изменения, хранения встроенных документов: табличного документ, макета табличного документа, текстового документа, форматированного документа. Модуль менеджера содержит функцию для получения данных "ВыполнитьПравило"
   
 ![Форма элемента](images/ПравилоОписаниеВстрДокументов.png)
   
