Update Правила получения данных.md

--- a/Подсистема расширенных настроек (ess)/Правила получения данных.md
+++ b/Подсистема расширенных настроек (ess)/Правила получения данных.md
@@ -4,7 +4,7 @@
 2. Справочник "Настроеки ППД"
 3. Регистр сведений "Настройки получения значений"
 
-## Описание Правила
+## Правила получения данных
 
 Справочник служит для хранения и редактирования схемы компоновки данных. Модуль менеджера содержит функцию для получения данных "ВыполнитьПравило".
 - __*Вариант выполнения*__  правила служит для определения способа получения данных: 
@@ -32,7 +32,7 @@
   
 ![ППД](images/ППД.png)
   
-## Описание Настройки правила
+## Настройки правила
 
 Справочник хранит настройки схемы компоновки данных и, если вариант выполнения запрос, то текст запроса и его параметры.
 
