Update Правила инициализации данных.md

--- a/Подсистема расширенных настроек (ess)/Правила инициализации данных.md
+++ b/Подсистема расширенных настроек (ess)/Правила инициализации данных.md
@@ -5,4 +5,10 @@
 
 ## Правила инициализации данных
 
-Служит для хранения значений и табличных частей в хранилищах значений. Модуль менеджера содержит функцию для получения данных "ВыполнитьПравило"
+Служит для хранения значений и табличных частей в хранилищах значений. Модуль менеджера содержит функцию для получения данных "ВыполнитьПравило".
+Предлагает заполнять структуру данных согласно выбранному шаблону.
+
+## Шаблон набора параметров
+
+Хранит структуру реквизитов и табличных частей.
+
