Update Правила инициализации данных.md

--- a/Подсистема расширенных настроек (ess)/Правила инициализации данных.md
+++ b/Подсистема расширенных настроек (ess)/Правила инициализации данных.md
@@ -8,7 +8,11 @@
 Служит для хранения значений и табличных частей в хранилищах значений. Модуль менеджера содержит функцию для получения данных "ВыполнитьПравило".
 Предлагает заполнять структуру данных согласно выбранному шаблону.
 
+![Форма элемента](images/ПравилоОписаниеВстрДокументов.png)
+
 ## Шаблон набора параметров
 
 Хранит структуру реквизитов и табличных частей.
+
+![Форма элемента](images/ПравилоОписаниеВстрДокументов.png)
 
