Update Правила инициализации данных.md

--- a/Подсистема расширенных настроек (ess)/Правила инициализации данных.md
+++ b/Подсистема расширенных настроек (ess)/Правила инициализации данных.md
@@ -5,14 +5,14 @@
 
 ## Правила инициализации данных
 
-Служит для хранения значений и табличных частей в хранилищах значений. Модуль менеджера содержит функцию для получения данных "ВыполнитьПравило".
-Предлагает заполнять структуру данных согласно выбранному шаблону.
+Служит для хранения значений и табличных частей в хранилищах значений. Предлагает заполнять структуру данных согласно выбранному шаблону. Модуль менеджера содержит функцию для получения данных "ВыполнитьПравило".
 
-![Форма элемента](images/ПравилоОписаниеВстрДокументов.png)
+
+![Форма элемента](images/ФормаПравилаИнициализацииДанных.png)
 
 ## Шаблон набора параметров
 
 Хранит структуру реквизитов и табличных частей.
 
-![Форма элемента](images/ПравилоОписаниеВстрДокументов.png)
+![Форма элемента](images/ФормаШаблона.png)
 
