Update Правила инициализации данных.md

--- a/Подсистема расширенных настроек (ess)/Правила инициализации данных.md
+++ b/Подсистема расширенных настроек (ess)/Правила инициализации данных.md
@@ -7,12 +7,16 @@
 
 Служит для хранения значений и табличных частей в хранилищах значений. Предлагает заполнять структуру данных согласно выбранному шаблону. Модуль менеджера содержит функцию для получения данных "ВыполнитьПравило".
 
-
+Заполнение реквизитов шапки.
 ![Форма элемента](images/ФормаПравилаИнициализацииДанных.png)
+
+Заполнение табличной части. Колонка с выбором из списка.
+![Форма элемента](images/ФормаПравилаИнициализацииТЧ.png)
 
 ## Шаблон набора параметров
 
 Хранит структуру реквизитов и табличных частей.
 
+Создание шаблона. Форма редактированиятипа реквизита.
 ![Форма элемента](images/ФормаШаблона.png)
 
