--- a/Подсистема обслуживания данных (dsm)/Порядок обновления подсистемы.md
+++ b/Подсистема обслуживания данных (dsm)/Порядок обновления подсистемы.md
@@ -1,6 +1,6 @@
 # Порядок действий при обновлении подсистемы подсистемы
 
-Представленные порядок обновления подсистемы необходим для исключения ситуаций, когда сообщение старого формата будет обрабатываться (а скорее всего оно попадет в Карантин, несмотря на то, что будет верным для старых алгоритмов) новыми обновленными алгоритмами. Наиболее полный порядок действий при обновлении (ряд действий может опускаться в простых случаях обмена или при обновлениях, не затрагивающих основные механизмы и формат обмена между базами):
+ Представленные порядок обновления подсистемы необходим для исключения ситуаций, когда сообщение старого формата будет обрабатываться (а скорее всего оно попадет в Карантин, несмотря на то, что будет верным для старых алгоритмов) новыми обновленными алгоритмами. Наиболее полный порядок действий при обновлении (ряд действий может опускаться в простых случаях обмена или при обновлениях, не затрагивающих основные механизмы и формат обмена между базами):
 
 1.	Остановить регламентные задания команд всех обновляемых баз, участвующих в обмене.
 2.	Убедиться в отсутствии зарегистрированных данных к выгрузке.
@@ -10,14 +10,14 @@
 5.1.	для файловых хранилищ в отсутствии файлов по указанному пути с именами, согласно заданному шаблону.
 5.2.	для брокера AMQP в отсутствии сообщений в очереди (имя очереди идентично коду узла) для этого узла. 
 
-![Метаданные плана обмена](images/Кролик.png)  
+![Кролик](images/Кролик.png)  
 
 6.	Установить настройку «Количество повторов обработки пакета» в значение 1.
 7.	При необходимости проверить/извлечь/исправить/обработать данные Карантина Загрузки.
 8.	Выполнить команды обработки данных для всех не отключённых узлов всех планов обмена Шины Обмена МА. 
 9.	Убедиться в отсутствии зарегистрированных пакетов к обработке. 
  
-![Метаданные плана обмена](images/ЗагрузкаПравил.png)
+![Загрузка правил](images/ЗагрузкаПравил.png)
 
 10.	Вернуть прежнее значение настройки «Количество повторов обработки пакета». 
 11.	Обновить расширение «ИнтеграционныеМодулиШиныОбменаМА» для соответствующей конфигурации
