--- a/Подсистема обслуживания данных (dsm)/Общее.md
+++ b/Подсистема обслуживания данных (dsm)/Общее.md
@@ -2,9 +2,9 @@
 
 ![XDTO обмен](images/XDTOбмен.png)
 
-![Формирование и передача](images/Формирование»ѕередача.png)
+![Формирование и передача](images/ФормированиеИПередача.png)
 
-![Получение и обработка](images/Получение»ќбработка.png)
+![Получение и обработка](images/ПолучениеИОбработка.png)
 
 ## Глоссарий
 
@@ -20,7 +20,7 @@
 **Сообщение обмена** - единица обмена между базами. явл€етс€ набором сериализованных данных, разложенных по именам типов. 
 **Монитор шины обмена** - одно кольцо, чтоб править всеми.
 
-## Обработка ћонитор ќбслуживани€
+## Обработка Монитор Обслуживания
 
 ## Мониторинг
 
