--- a/Подсистема обслуживания данных (dsm)/Общее.md
+++ b/Подсистема обслуживания данных (dsm)/Общее.md
@@ -1,37 +1,37 @@
-# Џодсистема обслуживания данных
+# РЏРѕРґСЃРёСЃС‚РµРјР° РѕР±СЃР»СѓР¶РёРІР°РЅРёСЏ РґР°РЅРЅС‹С…
 
-![XDTO обмен](images/XDTOбмен.png)
+![XDTO РѕР±РјРµРЅ](images/XDTOР±РјРµРЅ.png)
 
-![”ормирование и передача](images/”ормирование€Џередача.png)
+![Р¤РѕСЂРјРёСЂРѕРІР°РЅРёРµ Рё РїРµСЂРµРґР°С‡Р°](images/Р¤РѕСЂРјРёСЂРѕРІР°РЅРёРµРёРџРµСЂРµРґР°С‡Р°.png)
 
-![Џолучение и обработка](images/Џолучение€Ћбработка.png)
+![РџРѕР»СѓС‡РµРЅРёРµ Рё РѕР±СЂР°Р±РѕС‚РєР°](images/РџРѕР»СѓС‡РµРЅРёРµРРћР±СЂР°Р±РѕС‚РєР°.png)
 
-## ѓлоссарий
+## С“Р»РѕСЃСЃР°СЂРёР№
 
-**†урнал операций** - список всех выгруженных, загруженных и обработанных данных. Един для всех узлов и планов обмена.
-**Џакет обмена** - элемент справочника с хранилищем сериализованных данных. Тип пакета обмена определяет его содержимое. Наименование пакета – контрольная сумма его данных.	
-**Љлюч пакета обмена** - ключевые поля содержимого объекта. Для Данных ИБ – Идентификатор (или измерения для регистров) + Тип, для Объекта XDTO – поля объекта наследника **Ref**, для Объекта ИБ – Идентификатор (или измерения для регистров) + Тип.
-**€дентификатор пакета обмена** - контрольная сумма ключа пакета обмена.
-**Ѓазовый идентификатор** - идентификатор пакета-источника изменений, используется только в журнале обмена текущей информационной базы. Возможное преобразование пакетов: а) – при выгрузке, б) – при загрузке.
+**вЂ СѓСЂРЅР°Р» РѕРїРµСЂР°С†РёР№** - СЃРїРёСЃРѕРє РІСЃРµС… РІС‹РіСЂСѓР¶РµРЅРЅС‹С…, Р·Р°РіСЂСѓР¶РµРЅРЅС‹С… Рё РѕР±СЂР°Р±РѕС‚Р°РЅРЅС‹С… РґР°РЅРЅС‹С…. Р•РґРёРЅ РґР»СЏ РІСЃРµС… СѓР·Р»РѕРІ Рё РїР»Р°РЅРѕРІ РѕР±РјРµРЅР°.
+**РЏР°РєРµС‚ РѕР±РјРµРЅР°** - СЌР»РµРјРµРЅС‚ СЃРїСЂР°РІРѕС‡РЅРёРєР° СЃ С…СЂР°РЅРёР»РёС‰РµРј СЃРµСЂРёР°Р»РёР·РѕРІР°РЅРЅС‹С… РґР°РЅРЅС‹С…. РўРёРї РїР°РєРµС‚Р° РѕР±РјРµРЅР° РѕРїСЂРµРґРµР»СЏРµС‚ РµРіРѕ СЃРѕРґРµСЂР¶РёРјРѕРµ. РќР°РёРјРµРЅРѕРІР°РЅРёРµ РїР°РєРµС‚Р° вЂ“ РєРѕРЅС‚СЂРѕР»СЊРЅР°СЏ СЃСѓРјРјР° РµРіРѕ РґР°РЅРЅС‹С….	
+**Р‰Р»СЋС‡ РїР°РєРµС‚Р° РѕР±РјРµРЅР°** - РєР»СЋС‡РµРІС‹Рµ РїРѕР»СЏ СЃРѕРґРµСЂР¶РёРјРѕРіРѕ РѕР±СЉРµРєС‚Р°. Р”Р»СЏ Р”Р°РЅРЅС‹С… РР‘ вЂ“ РРґРµРЅС‚РёС„РёРєР°С‚РѕСЂ (РёР»Рё РёР·РјРµСЂРµРЅРёСЏ РґР»СЏ СЂРµРіРёСЃС‚СЂРѕРІ) + РўРёРї, РґР»СЏ РћР±СЉРµРєС‚Р° XDTO вЂ“ РїРѕР»СЏ РѕР±СЉРµРєС‚Р° РЅР°СЃР»РµРґРЅРёРєР° **Ref**, РґР»СЏ РћР±СЉРµРєС‚Р° РР‘ вЂ“ РРґРµРЅС‚РёС„РёРєР°С‚РѕСЂ (РёР»Рё РёР·РјРµСЂРµРЅРёСЏ РґР»СЏ СЂРµРіРёСЃС‚СЂРѕРІ) + РўРёРї.
+**в‚¬РґРµРЅС‚РёС„РёРєР°С‚РѕСЂ РїР°РєРµС‚Р° РѕР±РјРµРЅР°** - РєРѕРЅС‚СЂРѕР»СЊРЅР°СЏ СЃСѓРјРјР° РєР»СЋС‡Р° РїР°РєРµС‚Р° РѕР±РјРµРЅР°.
+**РѓР°Р·РѕРІС‹Р№ РёРґРµРЅС‚РёС„РёРєР°С‚РѕСЂ** - РёРґРµРЅС‚РёС„РёРєР°С‚РѕСЂ РїР°РєРµС‚Р°-РёСЃС‚РѕС‡РЅРёРєР° РёР·РјРµРЅРµРЅРёР№, РёСЃРїРѕР»СЊР·СѓРµС‚СЃСЏ С‚РѕР»СЊРєРѕ РІ Р¶СѓСЂРЅР°Р»Рµ РѕР±РјРµРЅР° С‚РµРєСѓС‰РµР№ РёРЅС„РѕСЂРјР°С†РёРѕРЅРЅРѕР№ Р±Р°Р·С‹. Р’РѕР·РјРѕР¶РЅРѕРµ РїСЂРµРѕР±СЂР°Р·РѕРІР°РЅРёРµ РїР°РєРµС‚РѕРІ: Р°) вЂ“ РїСЂРё РІС‹РіСЂСѓР·РєРµ, Р±) вЂ“ РїСЂРё Р·Р°РіСЂСѓР·РєРµ.
 
-![‘вЯзи пакетов](images/СвязиПакетов.png)
+![вЂРІРЇР·Рё РїР°РєРµС‚РѕРІ](images/РЎРІСЏР·РёРџР°РєРµС‚РѕРІ.png)
 
-**Љлюч изменениЯ** - элемент справочника, служащий для связки журнала обмена и данных о пакете обмена. Ключи изменения связаны через РС ***Связи пакетов обмена***. Эта связь образуется при обработке пакета-источника см. изображения выше.
-**‘ообщение обмена** - единица обмена между базами. Является набором сериализованных данных, разложенных по именам типов. 
-**Њонитор шины обмена** - одно кольцо, чтоб править всеми.
+**Р‰Р»СЋС‡ РёР·РјРµРЅРµРЅРёРЇ** - СЌР»РµРјРµРЅС‚ СЃРїСЂР°РІРѕС‡РЅРёРєР°, СЃР»СѓР¶Р°С‰РёР№ РґР»СЏ СЃРІСЏР·РєРё Р¶СѓСЂРЅР°Р»Р° РѕР±РјРµРЅР° Рё РґР°РЅРЅС‹С… Рѕ РїР°РєРµС‚Рµ РѕР±РјРµРЅР°. РљР»СЋС‡Рё РёР·РјРµРЅРµРЅРёСЏ СЃРІСЏР·Р°РЅС‹ С‡РµСЂРµР· Р РЎ ***РЎРІСЏР·Рё РїР°РєРµС‚РѕРІ РѕР±РјРµРЅР°***. Р­С‚Р° СЃРІСЏР·СЊ РѕР±СЂР°Р·СѓРµС‚СЃСЏ РїСЂРё РѕР±СЂР°Р±РѕС‚РєРµ РїР°РєРµС‚Р°-РёСЃС‚РѕС‡РЅРёРєР° СЃРј. РёР·РѕР±СЂР°Р¶РµРЅРёСЏ РІС‹С€Рµ.
+**вЂРѕРѕР±С‰РµРЅРёРµ РѕР±РјРµРЅР°** - РµРґРёРЅРёС†Р° РѕР±РјРµРЅР° РјРµР¶РґСѓ Р±Р°Р·Р°РјРё. РЇРІР»СЏРµС‚СЃСЏ РЅР°Р±РѕСЂРѕРј СЃРµСЂРёР°Р»РёР·РѕРІР°РЅРЅС‹С… РґР°РЅРЅС‹С…, СЂР°Р·Р»РѕР¶РµРЅРЅС‹С… РїРѕ РёРјРµРЅР°Рј С‚РёРїРѕРІ. 
+**РЉРѕРЅРёС‚РѕСЂ С€РёРЅС‹ РѕР±РјРµРЅР°** - РѕРґРЅРѕ РєРѕР»СЊС†Рѕ, С‡С‚РѕР± РїСЂР°РІРёС‚СЊ РІСЃРµРјРё.
 
-## Ћбработка Њонитор ЋбслуживаниЯ
+## Р‹Р±СЂР°Р±РѕС‚РєР° РЉРѕРЅРёС‚РѕСЂ Р‹Р±СЃР»СѓР¶РёРІР°РЅРёРЇ
 
-## Њониторинг
+## РЉРѕРЅРёС‚РѕСЂРёРЅРі
 
-Њониторинг осуществляется посредством передачи данных на платформу визуализации Grafana через HTTP-сервис DashBoard. Адрес для доступа для источника данных имеет шаблон http://<С‘ервер>/<ИмяПубликации>/hs/grafana/<ИмяПланаОбмена>/<КодУзла>. 
-по данному URL доступны метрики, полученные из всех команд узла шины обмена.  Для выполнения мониторинга производительности ключевых операций шины обмена необходимо: 
-1.	Задать список метрик в команде узла.								  
-2.	Обеспечить фиксацию данных о производительности в менеджере команды.
-КЉроме метрик операций команды в систему мониторинга предоставляются данные: 
- - информация по событиям журнала операций (метрика Log) 
- - информация по заполнению карантина (метрики **SendingIsolation** и **ReceivingIsolation**)
- - метрики команд (информация о последней дате выполнения регламентного задания команды и время выполнения команды (метрика с добавлением префикса ***<ИмяПланаОбмена.КодУзла.>***)). 
-Адрес до страницы визуализации Grafana указывается в реквизите DashBoardURL узла шины обмена.
+РЉРѕРЅРёС‚РѕСЂРёРЅРі РѕСЃСѓС‰РµСЃС‚РІР»СЏРµС‚СЃСЏ РїРѕСЃСЂРµРґСЃС‚РІРѕРј РїРµСЂРµРґР°С‡Рё РґР°РЅРЅС‹С… РЅР° РїР»Р°С‚С„РѕСЂРјСѓ РІРёР·СѓР°Р»РёР·Р°С†РёРё Grafana С‡РµСЂРµР· HTTP-СЃРµСЂРІРёСЃ DashBoard. РђРґСЂРµСЃ РґР»СЏ РґРѕСЃС‚СѓРїР° РґР»СЏ РёСЃС‚РѕС‡РЅРёРєР° РґР°РЅРЅС‹С… РёРјРµРµС‚ С€Р°Р±Р»РѕРЅ http://<РЎвЂРµСЂРІРµСЂ>/<РРјСЏРџСѓР±Р»РёРєР°С†РёРё>/hs/grafana/<РРјСЏРџР»Р°РЅР°РћР±РјРµРЅР°>/<РљРѕРґРЈР·Р»Р°>. 
+РїРѕ РґР°РЅРЅРѕРјСѓ URL РґРѕСЃС‚СѓРїРЅС‹ РјРµС‚СЂРёРєРё, РїРѕР»СѓС‡РµРЅРЅС‹Рµ РёР· РІСЃРµС… РєРѕРјР°РЅРґ СѓР·Р»Р° С€РёРЅС‹ РѕР±РјРµРЅР°.  Р”Р»СЏ РІС‹РїРѕР»РЅРµРЅРёСЏ РјРѕРЅРёС‚РѕСЂРёРЅРіР° РїСЂРѕРёР·РІРѕРґРёС‚РµР»СЊРЅРѕСЃС‚Рё РєР»СЋС‡РµРІС‹С… РѕРїРµСЂР°С†РёР№ С€РёРЅС‹ РѕР±РјРµРЅР° РЅРµРѕР±С…РѕРґРёРјРѕ: 
+1.	Р—Р°РґР°С‚СЊ СЃРїРёСЃРѕРє РјРµС‚СЂРёРє РІ РєРѕРјР°РЅРґРµ СѓР·Р»Р°.								  
+2.	РћР±РµСЃРїРµС‡РёС‚СЊ С„РёРєСЃР°С†РёСЋ РґР°РЅРЅС‹С… Рѕ РїСЂРѕРёР·РІРѕРґРёС‚РµР»СЊРЅРѕСЃС‚Рё РІ РјРµРЅРµРґР¶РµСЂРµ РєРѕРјР°РЅРґС‹.
+РљР‰СЂРѕРјРµ РјРµС‚СЂРёРє РѕРїРµСЂР°С†РёР№ РєРѕРјР°РЅРґС‹ РІ СЃРёСЃС‚РµРјСѓ РјРѕРЅРёС‚РѕСЂРёРЅРіР° РїСЂРµРґРѕСЃС‚Р°РІР»СЏСЋС‚СЃСЏ РґР°РЅРЅС‹Рµ: 
+ - РёРЅС„РѕСЂРјР°С†РёСЏ РїРѕ СЃРѕР±С‹С‚РёСЏРј Р¶СѓСЂРЅР°Р»Р° РѕРїРµСЂР°С†РёР№ (РјРµС‚СЂРёРєР° Log) 
+ - РёРЅС„РѕСЂРјР°С†РёСЏ РїРѕ Р·Р°РїРѕР»РЅРµРЅРёСЋ РєР°СЂР°РЅС‚РёРЅР° (РјРµС‚СЂРёРєРё **SendingIsolation** Рё **ReceivingIsolation**)
+ - РјРµС‚СЂРёРєРё РєРѕРјР°РЅРґ (РёРЅС„РѕСЂРјР°С†РёСЏ Рѕ РїРѕСЃР»РµРґРЅРµР№ РґР°С‚Рµ РІС‹РїРѕР»РЅРµРЅРёСЏ СЂРµРіР»Р°РјРµРЅС‚РЅРѕРіРѕ Р·Р°РґР°РЅРёСЏ РєРѕРјР°РЅРґС‹ Рё РІСЂРµРјСЏ РІС‹РїРѕР»РЅРµРЅРёСЏ РєРѕРјР°РЅРґС‹ (РјРµС‚СЂРёРєР° СЃ РґРѕР±Р°РІР»РµРЅРёРµРј РїСЂРµС„РёРєСЃР° ***<РРјСЏРџР»Р°РЅР°РћР±РјРµРЅР°.РљРѕРґРЈР·Р»Р°.>***)). 
+РђРґСЂРµСЃ РґРѕ СЃС‚СЂР°РЅРёС†С‹ РІРёР·СѓР°Р»РёР·Р°С†РёРё Grafana СѓРєР°Р·С‹РІР°РµС‚СЃСЏ РІ СЂРµРєРІРёР·РёС‚Рµ DashBoardURL СѓР·Р»Р° С€РёРЅС‹ РѕР±РјРµРЅР°.
 
-![Мониторинг](images/Њониторинг.png)
+![РњРѕРЅРёС‚РѕСЂРёРЅРі](images/РЉРѕРЅРёС‚РѕСЂРёРЅРі.png)
