--- a/Подсистема обслуживания данных (dsm)/Общее.md
+++ b/Подсистема обслуживания данных (dsm)/Общее.md
@@ -1,8 +1,8 @@
 # Џодсистема обслуживания данных
 
-![XDTO обмен](images/XDTOбмен.png)
+![XDTO обмен](images/XDTOОбмен.png)
 
-![Формирование и передача](images/ФормированиеиПередача.png)
+![Формирование и передача](images/ФормированиеИПередача.png)
 
 ![Получение и обработка](images/ПолучениеИОбработка.png)
 
