--- a/Подсистема обслуживания данных (dsm)/Общее.md
+++ b/Подсистема обслуживания данных (dsm)/Общее.md
@@ -6,7 +6,7 @@
 
 ![Получение и обработка](images/ПолучениеИОбработка.png)
 
-## ѓлоссарий
+## Глоссарий
 
 **†урнал операций** - список всех выгруженных, загруженных и обработанных данных. Един для всех узлов и планов обмена.
 **Џакет обмена** - элемент справочника с хранилищем сериализованных данных. Тип пакета обмена определяет его содержимое. Наименование пакета – контрольная сумма его данных.	
